content/influxdb/v0.12/administration/config.md
---
title: Database Configuration
menu:
  influxdb_012:
    weight: 40
    parent: administration
---

The InfluxDB configuration file contains configuration settings specific to a local node.

## Using Configuration Files

The `influxd config` command will print out a new TOML-formatted configuration with all the available configuration options set to their default values.
On POSIX systems, a new configuration file can be generated by redirecting the output of the command to a file.

```bash
influxd config > /etc/influxdb/influxdb.conf.generated
```

Custom settings from an older configuration file can be preserved when generating a new config file using the `-config` option.

```bash
influxd config -config /etc/influxdb/influxdb.conf.old > /etc/influxdb/influxdb.conf.new
```

Use the `-config` option to start InfluxDB using a configuration file.

```bash
influxd -config /etc/influxdb/influxdb.conf.new
```

InfluxDB will use the default configuration settings when no configuration file is provided.
A new configuration file should be generated every time InfluxDB is upgraded.

See the [installation documentation](/influxdb/v0.12/introduction/installation/#generate-a-configuration-file) for more detail on generating and using configuration files.

## Configuration Sections

* [Global Options](/influxdb/v0.12/administration/config/#global-options)
* [[meta]](/influxdb/v0.12/administration/config/#meta)
* [[data]](/influxdb/v0.12/administration/config/#data)
* [[hinted-handoff]](/influxdb/v0.12/administration/config/#hinted-handoff)
* [[cluster]](/influxdb/v0.12/administration/config/#cluster)
* [[retention]](/influxdb/v0.12/administration/config/#retention)
* [[shard-precreation]](/influxdb/v0.12/administration/config/#shard-precreation)
* [[admin]](/influxdb/v0.12/administration/config/#admin)
* [[monitor]](/influxdb/v0.12/administration/config/#monitor)
* [[http]](/influxdb/v0.12/administration/config/#http)
* [[graphite]](/influxdb/v0.12/administration/config/#graphite)
* [[collectd]](/influxdb/v0.12/administration/config/#collectd)
* [[opentsdb]](/influxdb/v0.12/administration/config/#opentsdb)
* [[udp]](/influxdb/v0.12/administration/config/#udp)
* [[continuous_queries]](/influxdb/v0.12/administration/config/#continuous-queries)

## Configuration Options

Every configuration section has configuration options.
Every configuration option is optional.
If a configuration option is not provided, its default value will be used.
All configuration options listed below are set to their default value.

>**Note:** This page documents configuration options for the latest official release - the [sample configuration file on GitHub](https://github.com/influxdb/influxdb/blob/master/etc/config.sample.toml) will always be slightly ahead of what is documented here.

## Global Options

### reporting-disabled = false

InfluxData, the company, relies on reported data from running nodes
primarily to track the adoption rates of different InfluxDB versions.
This data helps InfluxData support the continuing development of
InfluxDB.  InfluxData does not request, track, or store the IP
addresses of reporting servers.

The `reporting-disabled` option toggles
the reporting of anonymous data every 24 hours to `m.influxdb.com`.
Each report includes a unique, randomly-generated cluster identifier
(an 8-byte Raft ID), OS, architecture, InfluxDB version, and the
number of [databases](/influxdb/v0.12/concepts/glossary/#database),
[measurements](/influxdb/v0.12/concepts/glossary/#measurement), and
unique [series](/influxdb/v0.12/concepts/glossary/#series).  Setting
this option to `true` will disable reporting.

## [meta]

This section controls some of the parameters for the InfluxDB cluster.
Specifically, it handles the parameters for the Raft consensus group which coordinates metadata about the cluster.
For step-by-step instructions on setting up an InfluxDB cluster, see [Cluster Setup](/influxdb/v0.12/clustering/cluster_setup/).

### enabled = true
Controls if this node should run the metaservice and participate in the Raft group.

### dir = "/var/lib/influxdb/meta"

The `meta` directory contains the metastore, which stores information on nodes, users, databases, retention policies, shards, and continuous queries.
Files in the `meta` directory include: `id`, `peers.json`, `raft.db`, and the `snapshots` directory.

* `id` stores the identification number of the Raft peer: `1` for the first node to join the cluster, `2` for the second node, and `3` for the third node to join the cluster.
* `peers.json` stores the hostnames and ports of any Raft peers.
There will always be at least one hostname present.
* `snapshots` contains the server's snapshots taken for the purpose of log compaction.
* `raft.db` is the BoltDB database that contains the Raft log and snapshots.

>**Note:** The default directory for OSX installations is `/Users/<username>/.influxdb/meta`

### hostname = "localhost"

The hostname of the node which is advertised to its Raft peers.
InfluxDB tries to get the hostname automatically, but if the OS returns something that isn't resolvable by other servers in the cluster, use this option to manually set the hostname.

### bind-address = ":8088"

The bind address is the `port` for cluster wide communication.

### http-bind-address = ":8091"

The bind address for consensus communication.

### https-enabled = false

### https-certificate = ""

### retention-autocreate = true

Retention policy auto-creation automatically creates a [`default` retention policy](/influxdb/v0.12/concepts/glossary/#retention-policy-rp) when a database is created.
The retention policy is named `default`, has an infinite duration, and is also set as the database's default retention policy, which is used when a write or query does not specify a retention policy.
Disable this setting to prevent the creation of a `default` retention policy when creating databases.

### election-timeout = "1s"

The election timeout is the duration a Raft candidate spends in the candidate state without a leader before it starts an election.
The election timeout is slightly randomized on each Raft node to a value between one to two times the election timeout duration.
The default setting should work for most systems.

### heartbeat-timeout = "1s"

The heartbeat timeout is the amount of time a Raft follower remains in the follower state without a leader before it starts an election.
Clusters with high latency between nodes may want to increase this parameter.

### leader-lease-timeout = "500ms"

The leader lease timeout is the amount of time a Raft leader will remain leader if it does not hear from a majority of nodes.
After the timeout the leader steps down to the follower state.
The default setting should work for most systems.

### commit-timeout = "50ms"

The commit timeout is the amount of time a Raft node will tolerate between commands before issuing a heartbeat to tell the leader it is alive.
The default setting should work for most systems.

### cluster-tracing = false

Cluster tracing toggles the logging of Raft logs on Raft nodes.
Enable this setting when debugging Raft consensus issues.

### raft-promotion-enabled = true

Raft promotion automatically promotes a node to a Raft node when needed.
Disabling Raft promotion is desirable only when specific nodes should be participating in Raft consensus.

### logging-enabled = true

Meta logging toggles the logging of messages from the meta service.

### pprof-enabled = false

### lease-duration = "1m0s"

The default duration for leases.

## [data]

This section controls where the actual shard data for InfluxDB lives and how it is flushed from the WAL. `dir` may need to be changed to a suitable place for you system, but the WAL settings are an advanced configuration. The defaults should work for most systems.

### enabled = true
Controls if the node holds time series data shards in the cluster.

### dir = "/var/lib/influxdb/data"

The directory where InfluxDB stores the data.
This directory may be changed.

>**Note:** The default directory for OSX installations is `/Users/<username>/.influxdb/data`

### query-log-enabled = true

The query log enabled setting toggles the logging of parsed queries before execution.
Very useful for troubleshooting, but will log any sensitive data contained within a query.

### cache-max-memory-size = 524288000

The cache maximum memory size is the maximum size (in bytes) a shard's cache can reach before it starts rejecting writes.

### cache-snapshot-memory-size = 26214400

The cache snapshot memory size is the size at which the engine will snapshot the cache and write it to a TSM file, freeing up memory.

### cache-snapshot-write-cold-duration = "1h"

The cache snapshot write cold duration is the length of time at which the engine will snapshot the cache and write it to a new TSM file if the shard hasn't received writes or deletes.

### compact-min-file-count = 3

The compact minimum file count is the minimum number of TSM files that need to exist before a compaction cycle will run.

### compact-full-write-cold-duration = "24h"

he compact full write cold duration is the duration at which the engine will compact all TSM files in a shard if it hasn't received a write or delete.

### max-points-per-block = 1000

The maximum points per block is the maximum number of points in an encoded block in a TSM file.
Larger numbers may yield better compression but could incur a performance peanalty when querying.

## [hinted-handoff]

This section controls the hinted handoff feature, which allows nodes to temporarily store queued data when one node of a cluster is down for a short period of time.

>**Note:** The hinted handoff has no function in a single node cluster.

### enabled = true

Set to `false` to disable hinted handoff.

### dir = "/var/lib/influxdb/hh"

The hinted handoff directory.
For best throughput, the HH directory and the WAL directory should be on different physical devices.
If you have performance concerns, you will also want to make this setting different from the dir in the [[data]](/influxdb/v0.12/administration/config/#data) section.

>**Note:** The default directory for OSX installations is `/Users/<username>/.influxdb/hh`

### max-size = 1073741824

The maximum size of the hinted handoff queue for a node.
If the queue is full, new writes are rejected and an error is returned to the client.
The queue is drained when either the writes are retried successfully or the writes expire.

### max-age = "168h"

The time writes sit in the queue before they are purged.
The time is determined by how long the batch has been in the queue, not by the timestamps in the data.

### retry-rate-limit = 0

The rate (in bytes per second) per node at which the hinted handoff retries writes.
Set to `0` to disable the rate limit.

### retry-interval = "1s"

The initial interval at which the hinted handoff retries a write after it fails.

>**Note:** Hinted handoff begins retrying writes to down nodes at the interval defined by the `retry-interval`.
If any error occurs, it will backoff exponentially until it reaches the interval defined by the `retry-max-interval`.
Hinted handoff then retries writes at that interval until it succeeds.
The interval resets to the `retry-interval` once hinted handoff successfully completes writes to all nodes.

### retry-max-interval = "1m"

The maximum interval at which the hinted handoff retries a write after it fails.
It retries at this interval until it succeeds.

### purge-interval = "1h"

The interval at which InfluxDB checks to purge data that are above `max-age`.

## [cluster]

This section controls non-Raft cluster behavior, which generally includes how data are shared across shards.

### shard-writer-timeout = "5s"

The time that a write from one node to another must complete before the write times out.
If the write times out, it may still succeed on the remote node but the client node stops waiting and queues it in [hinted handoff](/influxdb/v0.12/concepts/glossary/#hinted-handoff).
This timeout should always be less than or equal to the write-timeout.

### write-timeout = "10s"

The time during which the coordinating node must receive a successful response for writing to all remote shard owners before it considers the write a failure.
If the write times out, it may still succeed but we stop waiting and queue those writes in [hinted handoff](/influxdb/v0.12/concepts/glossary/#hinted-handoff).
Depending on the requested consistency level and the number of successful responses received, the return value will be either `write failure` or `partial write`.

### max-concurrent-queries = 0

The maximum number of running queries allowed on your instance.
The default setting (`0`) allows for an unlimited number of queries.

### query-timeout = "0"

The maximum time for which a query can run on your instance before InfluxDB
kills the query.
The default setting (`0`) allows queries to run with no time restrictions.
This setting is a [duration literal](/influxdb/v0.12/query_language/spec/#durations).

### max-select-point = 0

The maximum number of [points](/influxdb/v0.12/concepts/glossary/#point) that a
`SELECT` statement can process.
The default setting (`0`) allows the `SELECT` statement to process an unlimited
number of points.

### max-select-series = 0

The maximum number of [series](/influxdb/v0.12/concepts/glossary/#series) that a
`SELECT` statement can process.
The default setting (`0`) allows the `SELECT` statement to process an unlimited
number of series.

### max-select-buckets = 0

The maximum number of `GROUP BY time()` buckets that a query can process.
The default setting (`0`) allows a query to process an unlimited number of
buckets.

## [retention]

This section controls the enforcement of retention policies for evicting old data.

### enabled = true

Set to `false` to prevent InfluxDB from enforcing retention policies.

### check-interval = "30m"

The rate at which InfluxDB checks to enforce a retention policy.

## [shard-precreation]

Controls the precreation of shards so that shards are available before data arrive.
Only shards that, after creation, will have both a start- and end-time in the future are ever created.
Shards that would be wholly or partially in the past are never precreated.

### enabled = true

### check-interval = "10m"

### advance-period = "30m"

The maximum period in the future for which InfluxDB precreates shards.
The `30m` default should work for most systems.
Increasing this setting too far in the future can cause inefficiencies.


## [monitor]

This section controls InfluxDB's [system self-monitoring](https://github.com/influxdb/influxdb/blob/master/monitor/README.md).

By default, InfluxDB writes the data to the `_internal` database.
If that database does not exist, InfluxDB creates it automatically.
The `DEFAULT` retention policy on the `_internal` database is seven days.
If you want to use a retention policy other than the seven-day retention policy, you must [create](/influxdb/v0.12/administration/administration/#retention-policy-management) it.

### store-enabled = true

Set to `false` to disable recording statistics internally.
If set to `false` it will make it substantially more difficult to diagnose issues with your installation.

### store-database = "\_internal"

The destination database for recorded statistics.

### store-interval = "10s"

The interval at which InfluxDB records statistics.

## [admin]

Controls the availability of the built-in, web-based admin interface.

### enabled = true

Set to `false` to disable the admin interface.

### bind-address = ":8083"

The port used by the admin interface.

### https-enabled = false

Set to `true` to enable HTTPS for the admin interface.

>**Note:** HTTPS must be enable for the [[http]](/influxdb/v0.12/administration/config/#http) service for the admin UI to function properly using HTTPS.

### https-certificate = "/etc/ssl/influxdb.pem"

The path of the certificate file.

## [http]

This section controls how InfluxDB configures the HTTP endpoints.
These are the primary mechanisms for getting data into and out of InfluxDB.
Edit the options in this section to enable HTTPS and authentication.
See [Authentication and Authorization](/influxdb/v0.12/administration/authentication_and_authorization/).

### enabled = true

Set to `false` to disable HTTP.
Note that the InfluxDB [command line interface (CLI)](/influxdb/v0.12/tools/shell/) connects to the database using the HTTP API.

### bind-address = ":8086"

The port used by the HTTP API.

### auth-enabled = false

Set to `true` to require authentication.

### log-enabled = true

Set to `false` to disable logging.

### write-tracing = false

Set to `true` to enable logging for the write payload.
If set to `true`, this will duplicate every write statement in the logs and is thus not recommended for general use.

### pprof-enabled = false

Set to `true` to enable [pprof](http://blog.golang.org/profiling-go-programs) on InfluxDB so that it gathers detailed performance information.

### https-enabled = false

Set to `true` to enable HTTPS.

### https-certificate = "/etc/ssl/influxdb.pem"

The path of the certificate file.

## [[graphite]]

This section controls one or many listeners for Graphite data.
See the [README](https://github.com/influxdb/influxdb/blob/master/services/graphite/README.md) on GitHub for more information.

### enabled = false

Set to `true` to enable Graphite input.

### database = "graphite"

The name of the database that you want to write to.

### bind-address = ":2003"

The default port.

### protocol = "tcp"

Set to `tcp` or `udp`.

### consistency-level = "one"

The number of nodes that must confirm the write.
If the requirement is not met the return value will be either `partial write` if some points in the batch fail or `write failure` if all points in the batch fail.
For more information, see the Query String Parameters for Writes section in the [Line Protocol Syntax Reference ](/influxdb/v0.12/write_protocols/write_syntax/).

*The next three options control how batching works.
You should have this enabled otherwise you could get dropped metrics or poor performance.
Batching will buffer points in memory if you have many coming in.*

### batch-size = 5000

The input will flush if this many points get buffered.

### batch-pending = 10

The number of batches that may be pending in memory.

### batch-timeout = "1s"

The input will flush at least this often even if it hasn't reached the configured batch-size.

### udp-read-buffer = 0

UDP Read buffer size, 0 means OS default.
UDP listener will fail if set above OS max.

### separator = "."

This string joins multiple matching 'measurement' values providing more control over the final measurement name.

### tags = ["region=us-east", "zone=1c"]

Default tags that will be added to all metrics.  
These can be overridden at the template level or by tags extracted from metric.

### templates = []

Each template line requires a template pattern.  
It can have an optional filter before the template and separated by spaces.  
It can also have optional extra tags following the template.  
Multiple tags should be separated by commas and no spaces similar to the line protocol format.  
There can be only one default template.
For more information on templates please see the [graphite service README](https://github.com/influxdata/influxdb/tree/master/services/graphite#templates)

## [collectd]

This section controls the listener for collectd data. See the
[README](https://github.com/influxdata/influxdb/tree/master/services/collectd)
on Github for more information.

### enabled = false

Set to `true` to enable collectd writes.

### bind-address = ""

The port.

### database = ""

The name of the database that you want to write to.
This defaults to `collectd`.

### typesdb = ""

Defaults to `/usr/share/collectd/types.db`. A sample `types.db` file
can be found
[here](https://github.com/collectd/collectd/blob/master/src/types.db).

*The next three options control how batching works.
You should have this enabled otherwise you could get dropped metrics or poor performance.
Batching will buffer points in memory if you have many coming in.*

### batch-size = 1000

The input will flush if this many points get buffered.

### batch-pending = 5

The number of batches that may be pending in memory.

### batch-timeout = "1s"

The input will flush at least this often even if it hasn't reached the configured batch-size.

### read-buffer = 0

UDP Read buffer size, 0 means OS default.
UDP listener will fail if set above OS max.

## [opentsdb]

Controls the listener for OpenTSDB data.
See the [README](https://github.com/influxdb/influxdb/blob/master/services/opentsdb/README.md) on GitHub for more information.

### enabled = false

Set to `true` to enable openTSDB writes.

### bind-address = ":4242"

The default port.

### database = "opentsdb"

The name of the database that you want to write to.
If the database does not exist, it will be created automatically when the input is initialized.

### retention-policy = ""

The relevant retention policy.
An empty string is equivalent to the database's `DEFAULT` retention policy.

### consistency-level = "one"

### tls-enabled = false

### certificate = ""

### log-point-errors = true

Log an error for every malformed point.

*The next three options control how batching works.
You should have this enabled otherwise you could get dropped metrics or poor performance.
Only points metrics received over the telnet protocol undergo batching.*

### batch-size = 1000

The input will flush if this many points get buffered.

### batch-pending = 5

The number of batches that may be pending in memory.

### batch-timeout = "1s"

The input will flush at least this often even if it hasn't reached the configured batch-size.

## [[udp]]

This section controls the listeners for InfluxDB line protocol data via UDP.
See the [UDP page](/influxdb/v0.12/write_protocols/udp/) for more information.

### enabled = false

Set to `true` to enable writes over UDP.

### bind-address = ""

An empty string is equivalent to `0.0.0.0`.

### database = "udp"

The name of the database that you want to write to.

### retention-policy = ""

The relevant retention policy for your data.
An empty string is equivalent to the database's `DEFAULT` retention policy.

*The next three options control how batching works.
You should have this enabled otherwise you could get dropped metrics or poor performance.
Batching will buffer points in memory if you have many coming in.*

### batch-size = 1000

The input will flush if this many points get buffered.

### batch-pending = 5

The number of batches that may be pending in memory.

### batch-timeout = "1s"

The input will flush at least this often even if it hasn't reached the configured batch-size.

### read-buffer = 0

UDP read buffer size, 0 means OS default.
UDP listener will fail if set above OS max.

### precision = "n"

The time precision used for UDP services.

### udp-payload-size = 65536

Sets the expected UDP payload size.
Lower values tend to yield better performance, default is max UDP size 65536.

## [continuous_queries]

This section controls how [continuous queries (CQs)](/influxdb/v0.12/concepts/glossary/#continuous-query-cq) run within InfluxDB.
CQs are automated batches of queries that execute over recent time intervals.
InfluxDB executes one auto-generated query per `GROUP BY time()` interval.

### log-enabled = true

Set to `false` to disable logging for CQ events.

### enabled = true

Set to `false` to disable CQs.

### run-interval = "1s"

The interval at which InfluxDB checks to see if a CQ needs to run. Set this option to the lowest interval at which your CQs run. For example, if your most frequent CQ runs every minute, set `run-interval` to `1m`.
